--- a/packages/simple-event-pool/package.json
+++ b/packages/simple-event-pool/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@tsfun/option": "^0.0.1",
-    "advanced-map-initialized": "0.0.2",
+    "advanced-map-initialized": "^0.0.2",
     "tslib": "^1.10.0",
     "@types/node": "^12.6.8"
   }
