Switch to using observable (rxjs)

--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -13,9 +13,8 @@
     "url": "https://github.com/KSXGitHub/personal-packages/issues"
   },
   "dependencies": {
-    "@khai96x/simple-event-pool": "^0.0.5",
-    "@khai96x/interval-event-pool-universe": "^0.0.1",
-    "@khai96x/my-events": "^0.0.2",
+    "@khai96x/interval-observable-universe": "^0.0.0",
+    "@khai96x/my-observables": "^0.0.0",
     "tslib": "^1.10.0",
     "@types/node": "^12.6.9"
   }
