--- a/packages/my-observables/package.json
+++ b/packages/my-observables/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@khai96x/simple-event-pool",
-  "version": "0.0.5",
-  "description": "Set up a simple event pool",
+  "name": "@khai96x/my-observables",
+  "version": "0.0.0",
+  "description": "Events that I use",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/KSXGitHub/personal-packages#readme",
@@ -13,8 +13,10 @@
     "url": "https://github.com/KSXGitHub/personal-packages/issues"
   },
   "dependencies": {
-    "@tsfun/option": "^0.0.1",
+    "rxjs": "^6.5.2",
     "advanced-map-initialized": "^0.0.2",
+    "advanced-spawn-async": "^0.0.1",
+    "@khai96x/interval-observable-universe": "^0.0.0",
     "tslib": "^1.10.0",
     "@types/node": "^12.6.9"
   }
