--- a/packages/repo-manager/package.json
+++ b/packages/repo-manager/package.json
@@ -16,7 +16,9 @@
     "@tsfun/pipe": "^0.0.0",
     "@tsfun/result": "^0.0.2",
     "isomorphic-git": "^0.60.1",
+    "fs-extra": "^8.1.0",
     "tslib": "^1.10.0",
+    "@types/fs-extra": "^8.0.0",
     "@types/node": "^12.7.1"
   }
 }
