--- a/packages/repo-manager/package.json
+++ b/packages/repo-manager/package.json
@@ -12,13 +12,19 @@
   "bugs": {
     "url": "https://github.com/KSXGitHub/personal-packages/issues"
   },
+  "bin": "./bin/index",
   "dependencies": {
     "@tsfun/pipe": "^0.0.1",
     "@tsfun/result": "^0.0.3",
+    "@octokit/rest": "^16.28.7",
     "isomorphic-git": "^0.64.0",
     "fs-extra": "^8.1.0",
+    "yargs": "^14.0.0",
+    "inquirer": "^6.5.1",
     "tslib": "^1.10.0",
     "@types/fs-extra": "^8.0.0",
+    "@types/yargs": "^13.0.2",
+    "@types/inquirer": "^6.5.0",
     "@types/node": "^12.7.2"
   }
 }
