--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@khai96x/interval-observable-universe": "^0.0.2",
     "@khai96x/my-observables": "^0.0.2",
+    "@khai96x/bump-package-versions": "^0.0.0",
     "tslib": "^1.10.0",
     "@types/node": "^12.7.11"
   }
