--- a/packages/choose-text-editor/package.json
+++ b/packages/choose-text-editor/package.json
@@ -18,6 +18,7 @@
     "which": "^2.0.1",
     "shell-escape": "^0.2.0",
     "cosmiconfig": "6.0.0",
+    "yargs": "^15.0.2",
     "exec-once": "0.1.2",
     "string-template-format": "^0.2.5",
     "@tsfun/option": "^0.0.10",
@@ -25,6 +26,7 @@
     "tslib": "^1.10.0",
     "@types/which": "^1.3.2",
     "@types/shell-escape": "^0.2.0",
+    "@types/yargs": "^13.0.3",
     "@types/node": "^12.12.21"
   }
 }
