--- a/packages/choose-text-editor/package.json
+++ b/packages/choose-text-editor/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "iter-tools": "^6.2.6",
     "which": "^2.0.1",
+    "semver": "^7.1.1",
+    "parse-package-name": "^0.1.0",
     "shell-escape": "^0.2.0",
     "cosmiconfig": "6.0.0",
     "yargs": "^15.0.2",
@@ -25,6 +27,8 @@
     "@tsfun/result": "^0.0.11",
     "tslib": "^1.10.0",
     "@types/which": "^1.3.2",
+    "@types/semver": "^6.2.0",
+    "@types/parse-package-name": "^0.1.0",
     "@types/shell-escape": "^0.2.0",
     "@types/yargs": "^13.0.3",
     "@types/node": "^12.12.21"
