Add json schemas for EditorSet

--- a/packages/choose-text-editor/package.json
+++ b/packages/choose-text-editor/package.json
@@ -19,6 +19,7 @@
     "semver": "^7.1.1",
     "parse-package-name": "^0.1.0",
     "shell-escape": "^0.2.0",
+    "jsonschema": "^1.2.5",
     "cosmiconfig": "6.0.0",
     "yargs": "^15.0.2",
     "exec-once": "0.1.2",
