--- a/packages/choose-text-editor/package.json
+++ b/packages/choose-text-editor/package.json
@@ -17,6 +17,7 @@
     "iter-tools": "^6.2.6",
     "which": "^2.0.1",
     "semver": "^7.1.1",
+    "js-yaml": "^3.13.1",
     "parse-package-name": "^0.1.0",
     "shell-escape": "^0.2.0",
     "jsonschema": "^1.2.5",
@@ -29,6 +30,7 @@
     "tslib": "^1.10.0",
     "@types/which": "^1.3.2",
     "@types/semver": "^6.2.0",
+    "@types/js-yaml": "^3.12.1",
     "@types/parse-package-name": "^0.1.0",
     "@types/shell-escape": "^0.2.0",
     "@types/yargs": "^13.0.3",
