--- a/packages/choose-text-editor/package.json
+++ b/packages/choose-text-editor/package.json
@@ -13,6 +13,9 @@
     "url": "https://github.com/KSXGitHub/personal-packages/issues"
   },
   "sideEffects": false,
+  "bin": {
+    "choose-text-editor": "bin/index"
+  },
   "dependencies": {
     "iter-tools": "^6.2.6",
     "which": "^2.0.1",
