--- a/packages/choose-text-editor/package.json
+++ b/packages/choose-text-editor/package.json
@@ -30,6 +30,7 @@
     "string-template-format": "^0.2.5",
     "@tsfun/option": "^0.0.10",
     "@tsfun/result": "^0.0.11",
+    "@khai96x/utils": "^0.0.0",
     "tslib": "^1.10.0",
     "@types/which": "^1.3.2",
     "@types/semver": "^6.2.0",
