--- a/packages/choose-text-editor/package.json
+++ b/packages/choose-text-editor/package.json
@@ -27,7 +27,7 @@
     "cosmiconfig": "6.0.0",
     "yargs": "^15.1.0",
     "exec-once": "0.1.2",
-    "string-template-format": "^0.2.5",
+    "string-template-format-inspect": "^0.1.4",
     "@tsfun/option": "^0.0.10",
     "@tsfun/result": "^0.0.11",
     "@khai96x/utils": "^0.0.0",
