--- a/packages/choose-text-editor/package.json
+++ b/packages/choose-text-editor/package.json
@@ -26,10 +26,10 @@
     "jsonschema": "^1.2.5",
     "cosmiconfig": "6.0.0",
     "yargs": "^15.1.0",
-    "exec-once": "0.1.2",
+    "exec-once": "^0.1.4",
     "string-template-format-inspect": "^0.1.4",
-    "@tsfun/option": "^0.0.10",
-    "@tsfun/result": "^0.0.11",
+    "@tsfun/option": "^0.0.12",
+    "@tsfun/result": "^0.0.13",
     "@khai96x/utils": "^0.0.0",
     "tslib": "^1.10.0",
     "@types/which": "^1.3.2",
@@ -38,6 +38,6 @@
     "@types/parse-package-name": "^0.1.0",
     "@types/shell-escape": "^0.2.0",
     "@types/yargs": "^15.0.0",
-    "@types/node": "^13.1.6"
+    "@types/node": "^13.1.7"
   }
 }
