--- a/packages/choose-text-editor/package.json
+++ b/packages/choose-text-editor/package.json
@@ -19,25 +19,25 @@
   "dependencies": {
     "iter-tools": "^6.2.6",
     "which": "^2.0.2",
-    "semver": "^7.1.3",
-    "js-yaml": "^3.13.1",
+    "semver": "^7.3.2",
+    "js-yaml": "^3.14.0",
     "parse-package-name": "^0.1.0",
     "shell-escape": "^0.2.0",
-    "jsonschema": "^1.2.5",
-    "cosmiconfig": "6.0.0",
-    "yargs": "^15.1.0",
-    "exec-once": "^0.1.6",
-    "string-template-format-inspect": "^0.1.6",
-    "@tsfun/option": "^0.0.15",
-    "@tsfun/result": "^0.0.16",
+    "jsonschema": "^1.2.6",
+    "cosmiconfig": "^7.0.0",
+    "yargs": "^15.4.1",
+    "exec-once": "^0.1.7",
+    "string-template-format-inspect": "^0.1.7",
+    "@tsfun/option": "^0.0.18",
+    "@tsfun/result": "^0.0.19",
     "@khai96x/utils": "^0.0.1",
-    "tslib": "^1.11.1",
+    "tslib": "^2.0.1",
     "@types/which": "^1.3.2",
-    "@types/semver": "^7.1.0",
-    "@types/js-yaml": "^3.12.2",
+    "@types/semver": "^7.3.3",
+    "@types/js-yaml": "^3.12.5",
     "@types/parse-package-name": "^0.1.0",
     "@types/shell-escape": "^0.2.0",
-    "@types/yargs": "^15.0.4",
-    "@types/node": "^13.7.7"
+    "@types/yargs": "^15.0.5",
+    "@types/node": "^14.6.0"
   }
 }
