--- a/packages/pacman/package.json
+++ b/packages/pacman/package.json
@@ -23,7 +23,9 @@
   "sideEffects": false,
   "dependencies": {
     "iter-tools": "^6.2.6",
+    "fs-extra": "^9.0.1",
     "tslib": "^2.0.1",
+    "@types/fs-extra": "^9.0.1",
     "@types/node": "^14.6.0"
   }
 }
