--- a/packages/my-observables/package.json
+++ b/packages/my-observables/package.json
@@ -13,8 +13,10 @@
     "url": "https://github.com/KSXGitHub/personal-packages/issues"
   },
   "dependencies": {
+    "iter-tools": "^6.2.6",
     "advanced-spawn-async": "^0.1.3",
     "@khai96x/interval-observable-universe": "^0.0.4",
+    "@khai96x/pacman": "^0.0.0",
     "tslib": "^2.0.1",
     "@types/node": "^14.6.0"
   }
