--- a/packages/pacman/package.json
+++ b/packages/pacman/package.json
@@ -26,6 +26,7 @@
     "iter-tools": "^6.2.6",
     "fs-extra": "^9.0.1",
     "tslib": "^2.0.1",
+    "@tsfun/result": "^0.0.19",
     "@types/fs-extra": "^9.0.1",
     "@types/node": "^14.6.0"
   }
