--- a/packages/srcinfo/package.json
+++ b/packages/srcinfo/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@khai96x/pacman",
-  "version": "0.0.1",
-  "description": "Utilities related to ArchLinux Package Manager (pacman)",
+  "name": "@khai96x/srcinfo",
+  "version": "0.0.0",
+  "description": "Parsing ArchLinux's .SRCINFO",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/KSXGitHub/personal-packages#readme",
@@ -13,19 +13,18 @@
     "url": "https://github.com/KSXGitHub/personal-packages/issues"
   },
   "keywords": [
+    "pkgbuild",
     "archlinux",
-    "pacman",
-    "aur"
+    "aur",
+    "srcinfo"
   ],
   "main": "index.js",
   "module": "index.mjs",
   "browser": "index.mjs",
   "sideEffects": false,
   "dependencies": {
-    "iter-tools": "^6.2.6",
-    "fs-extra": "^9.0.1",
     "tslib": "^2.0.1",
-    "@types/fs-extra": "^9.0.1",
+    "@tsfun/result": "^0.0.19",
     "@types/node": "^14.6.0"
   }
 }
