--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -20,6 +20,7 @@
     "@khai96x/shebang": "^0.0.0",
     "@khai96x/list-shell-files": "^0.0.0",
     "@khai96x/pacman": "^0.0.1",
+    "@khai96x/srcinfo": "^0.0.0",
     "tslib": "^2.0.1",
     "@types/node": "^14.6.0"
   }
