--- a/packages/browse-fs-tree/package.json
+++ b/packages/browse-fs-tree/package.json
@@ -21,8 +21,16 @@
   "module": "index.mjs",
   "browser": "index.mjs",
   "sideEffects": false,
+  "bin": {
+    "browse-fs-tree": "./bin/browse-fs-tree"
+  },
   "dependencies": {
+    "fs-extra": "^9.0.1",
+    "yargs": "^15.4.1",
     "tslib": "^2.0.1",
+    "@tsfun/result": "^0.0.20",
+    "@types/fs-extra": "^9.0.1",
+    "@types/yargs": "^15.0.5",
     "@types/node": "^14.6.2"
   }
 }
