--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -22,6 +22,7 @@
     "@khai96x/pacman": "^0.0.4",
     "@khai96x/srcinfo": "^0.0.3",
     "@khai96x/git-utils": "^0.0.5",
+    "@khai96x/browse-fs-tree": "^0.0.0",
     "tslib": "^2.0.1",
     "@types/node": "^14.6.2"
   }
