--- a/packages/git-utils/package.json
+++ b/packages/git-utils/package.json
@@ -30,10 +30,12 @@
   "dependencies": {
     "iter-tools": "^6.2.6",
     "isomorphic-git": "^1.7.4",
+    "fs-extra": "^9.0.1",
     "yargs": "^15.4.1",
     "@tsfun/result": "^0.0.20",
     "@khai96x/srcinfo": "^0.0.4",
     "tslib": "^2.0.1",
+    "@types/fs-extra": "^9.0.1",
     "@types/yargs": "^15.0.5",
     "@types/node": "^14.6.2"
   }
