Create 'fuzzyAdd' and 'fuzzyReset'

--- a/packages/git-utils/package.json
+++ b/packages/git-utils/package.json
@@ -29,6 +29,7 @@
   },
   "sideEffects": false,
   "dependencies": {
+    "shell-escape": "^0.2.0",
     "iter-tools": "^6.2.6",
     "isomorphic-git": "^1.7.4",
     "fs-extra": "^9.0.1",
@@ -38,6 +39,7 @@
     "@tsfun/result": "^0.0.20",
     "@khai96x/srcinfo": "^0.0.4",
     "tslib": "^2.0.1",
+    "@types/shell-escape": "^0.2.0",
     "@types/fs-extra": "^9.0.1",
     "@types/get-stdin": "^7.0.0",
     "@types/yargs": "^15.0.5",
